--- a/kubernetes/helm/templates/webui-deployment.yaml
+++ b/kubernetes/helm/templates/webui-deployment.yaml
@@ -42,6 +42,9 @@ spec:
         env:
         - name: OLLAMA_BASE_URL
           value: {{ include "ollama.url" . | quote }}
+          {{- if gt (len .Values.extraEnv) 0 -}}
+          {{ .Values.extraEnv | toYaml | nindent 6 }}
+          {{- end }}
         tty: true
       {{- with .Values.webui.nodeSelector }}
       nodeSelector:
